third-week/third-week-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: third-week-svc
  namespace: default
spec:
  selector:
    app: third-week-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
