third-week/third-week-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sample-service
              port:
                number: 80
        - path: /third-week
          pathType: Prefix
          backend:
            service:
              name: third-week-svc
              port:
                number: 80
